# sim_icom

./: .gitignore  Cargo.toml  README.md  aaa.json  database.csv
Historique/: 1106v0.1.0 du 24.10.2023.md  1106v0.3.0 du 26.10.2023.md  aaa-1106v0.1.0 du 24.10.2023.json
datas/: database.csv  database_test.csv
src/: README_DEV.md  command_args.rs  main.rs  server_modbus_tcp.rs  tcp_server.rs  watcher.rs
src/afsec/: mod.rs
src/afsec/middleware/: context.rs  id_message.rs  m_data_in.rs  m_data_out.rs  m_data_out_table_index.rs  m_init.rs  m_menu.rs  m_pack_in.rs  m_pack_out.rs  mod.rs  records.rs  utils.rs
src/afsec/tlv_frame/: data_frame.rs  data_item.rs  mod.rs  raw_frame.rs
src/database/: database_bool.rs  database_csv.rs  database_u8.rs  id_tag.rs  id_users.rs  mod.rs  t_format.rs  t_value.rs  tag.rs
src/database/database_rw/: database_bool.rs  database_f32.rs  database_f64.rs  database_i16.rs  database_i32.rs  database_i64.rs  database_i8.rs  database_string.rs  database_u16.rs  database_u32.rs  database_u64.rs  database_u8.rs  database_vec_u8.rs  mod.rs
src/t_data/: be_data.rs  mod.rs  t_format.rs  t_value.rs
