[package]
name = "sim_icom"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-modbus = { version = "*", default-features = false, features = ["tcp-server"] }
futures = "0.3"
anyhow = "1.0"
tokio-serial = "5.4"
clap = {version = "4.4", features = ["derive"]}

[dev-dependencies]
assert_float_eq = "1.1"

[profile.release]
strip = true  # Automatically strip symboles from the binary
lto = true  # Enable link time optimization
codegen-units = 1  # Maximize size reduction optimizations
